# SmartHex16

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  PAPER.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
smarthex/: MATHEMATICAL.md  README.md  pyproject.toml  smhex  test_generate.py
smarthex/smarthex/: __init__.py  cli.py  main.py
